@@ -64,6 +64,7 @@ braintree_blue:
   merchant_id: X
   public_key: Y
   private_key: Z
+  merchant_account_id: A
 
 braintree_blue_with_processing_rules:
   merchant_id: X
