@@ -94,23 +94,23 @@ module ActiveMerchant
     # A handy little assertion to check for a successful response:
     #
     #   # Instead of
-    #   assert_success response
+    #   assert response.success?
     #
     #   # DRY that up with
     #   assert_success response
     #
     # A message will automatically show the inspection of the response
     # object if things go afoul.
-    def assert_success(response)
+    def assert_success(response, message=nil)
       clean_backtrace do
-        assert response.success?, "Response failed: #{response.inspect}"
+        assert response.success?, build_message(nil, "#{message + "\n" if message}Response expected to succeed: <?>", response)
       end
     end
 
     # The negative of +assert_success+
-    def assert_failure(response)
+    def assert_failure(response, message=nil)
       clean_backtrace do
-        assert_false response.success?, "Response expected to fail: #{response.inspect}"
+        assert !response.success?, build_message(nil, "#{message + "\n" if message}Response expected to fail: <?>", response)
       end
     end
 
