@@ -6,6 +6,7 @@
 * Paymill: Fix authorizations [duff]
 * Braintree Blue: Allow specifying the credit card token [ntalbott]
 * Braintree Blue: Allow specifying the customer id [ntalbott]
+* Braintree Blue: Scrub invalid emails and zips [ntalbott]
 
 == Version 1.42.2 (November 13th, 2013)
 
